Penyesuaian cover dan heading

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,31 +23,31 @@
 \begin{document}
 
     %Basic configuration
-    \title{Panduan Tugas Akhir Informatika}
+    \title{TF4063 Sains Data Rekayasa}
     \date{}
     \author{
-        Peb Ruswono Aryan \\
-        NIM 13502044
+        Saleh Zaidan \quad 13318006 \\
+        Farrel Dzaudan Naufal \quad 13318048
     }
 
     \pagenumbering{roman}
     \setcounter{page}{0}
 
     \input{chapters/cover}
-    \input{chapters/approval}
-    \input{chapters/statement}
+    %\input{chapters/approval}
+    %\input{chapters/statement}
 
     \pagestyle{plain}
 
-    \input{chapters/abstract-id}
-    \input{chapters/abstract-en}
-    \input{chapters/forewords}
+    %\input{chapters/abstract-id}
+    %\input{chapters/abstract-en}
+    %\input{chapters/forewords}
 
     \titleformat*{\section}{\centering\bfseries\Large\MakeUpperCase}
 
     \tableofcontents
-    \listoffigures
-    \listoftables
+    %\listoffigures
+    %\listoftables
 
     \titleformat*{\section}{\bfseries\Large}
     \pagenumbering{arabic}
@@ -55,7 +55,7 @@
     %----------------------------------------------------------------%
     % Konfigurasi Bab
     %----------------------------------------------------------------%
-    \setcounter{page}{0}
+    \setcounter{page}{1}
     \renewcommand{\chaptername}{BAB}
     \renewcommand{\thechapter}{\Roman{chapter}}
     %----------------------------------------------------------------%
@@ -75,12 +75,12 @@
     \printbibliography
 
     % Index
-    \appendix
+    %\appendix
 
-    \addcontentsline{toc}{part}{Lampiran}
-    \part*{Lampiran}
+    %\addcontentsline{toc}{part}{Lampiran}
+    %\part*{Lampiran}
 
-    \input{chapters/appendix-1}
-    \input{chapters/appendix-2}
+    %\input{chapters/appendix-1}
+    %\input{chapters/appendix-2}
 
 \end{document}
