Update judul dan bab metode acuan

--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -34,7 +34,9 @@
 
 	% D
 	%
+	da-lam
 	da-e-rah
+	da-ri
 	di-nya-ta-kan
 	de-fi-ni-si
 
@@ -54,6 +56,7 @@
 	% H
 	%
 	ha-lang-an
+	hing-ga
 
 	% I
 	% 
@@ -66,6 +69,7 @@
 
 	% K
 	%
+	ko-lom
 
 	% L
 	%
@@ -90,9 +94,12 @@
 
 	% S
 	%
+	sen-sor
 
 	% T
 	% 
+	ter-di-ri
+	ter-se-bar
 
 	% U
 	%
