--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,7 +23,7 @@
 \begin{document}
 
     %Basic configuration
-    \title{TF4063 Sains Data Rekayasa}
+    \title{Analisis Metode LSTM Neural Network dan Bayesian Probability untuk Anomaly Detection}
     \date{}
     \author{
         Saleh Zaidan \quad 13318006 \\
