--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -12,6 +12,43 @@
 
 \documentclass[12pt, a4paper, onecolumn, oneside, final]{report}
 
+% Default fixed font does not support bold face
+\DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{12} % for bold
+\DeclareFixedFont{\ttm}{T1}{txtt}{m}{n}{12}  % for normal
+
+% custom colors
+\usepackage{color}
+\definecolor{deepblue}{rgb}{0,0,0.5}
+\definecolor{deepred}{rgb}{0.6,0,0}
+\definecolor{deepgreen}{rgb}{0,0.5,0}
+
+\usepackage{listings}
+
+% Python style for highlighting
+\newcommand\pythonstyle{\lstset{
+language=Python,
+basicstyle=\ttm,
+otherkeywords={}, % tambah disini buat highlight biru (fungsi internal python: def, print, dll)
+keywordstyle=\ttb\color{deepblue},
+emph={},          % buat highlight merah (gatau buat apa ya wkwk, kalo mau isi nama2 library paling)
+emphstyle=\ttb\color{deepred},    % Custom highlighting style
+stringstyle=\color{deepgreen},
+frame=tb,                         % Any extra options here
+showstringspaces=false            % 
+}}
+
+% Python environment
+\lstnewenvironment{python}[1][]
+{
+\pythonstyle
+\lstset{#1}
+}
+{}
+
+% Python for inline
+\newcommand\pythoninline[1]{{\pythonstyle\lstinline!#1!}}
+
+
 \input{config/if-itb-thesis.sty}
 
 \makeatletter
