Update analisis LSTM

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -60,7 +60,7 @@ showstringspaces=false            %
 \begin{document}
 
     %Basic configuration
-    \title{Analisis Metode LSTM Neural Network dan Bayesian Probability untuk Anomaly Detection}
+    \title{Analisis Metode LSTM Autoencoder dan Bayesian Probability untuk Anomaly Detection}
     \date{}
     \author{
         Saleh Zaidan \quad 13318006 \\
