Ide Konsep dan Penurunan Mtk Bayesian

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,6 +23,7 @@
 \definecolor{deepgreen}{rgb}{0,0.5,0}
 
 \usepackage{listings}
+\usepackage{amsmath}
 
 % Python style for highlighting
 \newcommand\pythonstyle{\lstset{
