bugfix equation yg kepanjangan

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -24,6 +24,7 @@
 
 \usepackage{listings}
 \usepackage{amsmath}
+\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
 % Python style for highlighting
 \newcommand\pythonstyle{\lstset{
