Atur daftar pustaka

--- a/src/references.bib
+++ b/src/references.bib
@@ -1,19 +1,18 @@
-@book{knuth2001art,
-    title={The Art of Computer Programming: Fundamental Algorithms},
-    author={Knuth, D.E.},
-    number={v. 1},
-    isbn={9780201896831},
-    series={The Art of Computer Programming: Fundamental Algorithms},
-    year={2001},
-    publisher={Addison-Wesley}
+@misc{lstm,
+  author = {Venelin Valkov},
+  title  = {Time Series Anomaly Detection using LSTM Autoencoders with PyTorch in Python},
+  url    = {https://curiousily.com/posts/time-series-anomaly-detection-using-lstm-autoencoder-with-pytorch-in-python/},
+  year   = {2020}
 }
-@INPROCEEDINGS{4026885,
-    author={W. Vogels},
-    booktitle={2006 IEEE International Conference on Services Computing (SCC'06)},
-    title={Web Services at Amazon.com},
-    year={2006},
-    pages={xxii-xxii},
-    keywords={Distributed computing;Technological innovation;Web services},
-    doi={10.1109/SCC.2006.116},
-    month={Sept}
+@misc{metode_acuan,
+  author = {Bauyrjan Jyenis},
+  title  = {Anomaly Detection in Time Series Sensor Data},
+  url    = {https://towardsdatascience.com/anomaly-detection-in-time-series-sensor-data-86fd52e62538},
+  year   = {2020}
+}
+@misc{pump_sensor_data,
+  author = {nphantawee},
+  title  = {Pump sensor data for predictive maintenance},
+  url    = {https://www.kaggle.com/nphantawee/pump-sensor-data},
+  year   = {2018}
 }
