--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -79,7 +79,7 @@ showstringspaces=false            %
     }
 
     \pagenumbering{roman}
-    \setcounter{page}{0}
+    \setcounter{page}{1}
 
     \input{chapters/cover}
     %\input{chapters/approval}
@@ -120,7 +120,7 @@ showstringspaces=false            %
     %----------------------------------------------------------------%
 
     % Daftar pustaka
-    \printbibliography
+    \printbibliography[heading=bibintoc,title={Daftar Pustaka}]
 
     % Index
     %\appendix
