--- a/src/config/if-itb-thesis.sty
+++ b/src/config/if-itb-thesis.sty
@@ -22,7 +22,7 @@
 \usepackage[bahasa]{babel}
 
 % Format citation
-\usepackage[backend=bibtex,citestyle=authoryear]{biblatex}
+\usepackage[backend=bibtex,citestyle=numeric]{biblatex}
 
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
