chap 1 done, adding some in chap 2, chap 4 transformed

--- a/src/references.bib
+++ b/src/references.bib
@@ -16,3 +16,9 @@
   url    = {https://www.kaggle.com/nphantawee/pump-sensor-data},
   year   = {2018}
 }
+@misc{unsupervised_anomaly,
+  author = {Árpád Fülöp},
+  title  = {How to Evaluate Unsupervised Anomaly Detection for User Behavior Analytics},
+  url    = {https://medium.com/balabit-unsupervised/how-to-evaluate-unsupervised-anomaly-detection-for-user-behavior-analytics-88f3d5de2018},
+  year   = {2017}
+}
