--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -13,6 +13,7 @@
 \documentclass[12pt, a4paper, onecolumn, oneside, final]{report}
 
 \usepackage{enumitem}
+\usepackage{float}
 
 % Default fixed font does not support bold face
 \DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{12} % for bold
@@ -132,6 +133,7 @@ showstringspaces=false            %
     
 
     Daftar file jupyter notebook yang penulis lampirkan dalam link google drive berikut:
+    https://drive.google.com/drive/folders/1mjf-hefWUkvGAlhulI-Cl-TQ22Q1rUwh?usp=sharing
 
     Jupyter notebook program acuan dan modifikasi:
     \begin{enumerate}[label=\textbf{L.\arabic*}]
@@ -150,6 +152,54 @@ showstringspaces=false            %
         \item Bayes\textunderscore revB.ipynb \label{bayes_ipynb}
         \item Bayes\textunderscore Result\textunderscore Analysis.ipynb \label{lstm_pca_res_ipynb}
     \end{enumerate}
+
+    Beberapa grafik yang representatif. Lengkapnya ada pada link google drive diatas.
+
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/IQR_sensor_11.png}}
+        \caption{Hasil prediksi anomali model IQR} \label{IQR11}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/KMeans_sensor_11.png}}
+        \caption{Hasil prediksi anomali model K-Means Clustering} \label{KM11}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/IsoFor_sensor_11.png}}
+        \caption{Hasil prediksi anomali model Isolation Forest} \label{IF11}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/IQR_machine_status.png}}
+        \caption{Anomali model IQR dan status mesin} \label{IQRms}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/KMeans_machine_status.png}}
+        \caption{Anomali model K-Means Clustering dan status mesin} \label{KMms}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Acuan/IsoFor_machine_status.png}}
+        \caption{Anomali model Isolation Forest dan status mesin} \label{IFms}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/Bayes/Bayes_machine_status.png}}
+        \caption{Anomali model Bayesian dan status mesin} \label{Bms}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/LSTM/LSTM_noPCA_machine_status.png}}
+        \caption{Anomali model LSTM tanpa PCA dan status mesin} \label{nPms}
+    \end{figure}
+    \begin{figure}[h]
+        %\centering
+        \centerline{\includegraphics[width=1.4\textwidth]{resources/LSTM/LSTM_PCA_machine_status.png}}
+        \caption{Anomali model LSTM dengan PCA dan status mesin} \label{wPms}
+    \end{figure}
 
 
     %\input{chapters/appendix-1}
